# server/public/swagger.json
@@ -14,6 +14,12 @@
 					"password": {
 						"type": "string"
 					},
+					"last_name": {
+						"type": "string"
+					},
+					"email": {
+						"type": "string"
+					},
 					"second_name": {
 						"type": "string"
 					},
@@ -26,7 +32,6 @@
 					}
 				},
 				"required": [
-					"second_name",
 					"first_name"
 				],
 				"type": "object"
